2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/autologinpage.cpp,
	src/core/site.cpp,
	src/view/telnetcon.cpp,
	src/sitedlg.cpp:
	Add auto-login functionality.
	(CTelnetCon::ConnectThread) : Use select() in place of other blocking
	socket API without timeout.  This cause problems sometimes.

	* src/generalprefpage.cpp,
	src/view/telnetview.cpp,
	src/dialog.cpp:
	Little fix to accept NULL parent window.

	* src/appconfig.cpp,
	src/pcmanx_pure_gtk2.cpp:
	Add socket timeout settings.

2005-07-24  Jim Huang  <jserv@kaffe.org>

	* configure.ac:
	Improve the IDL path detection for xpidl, and set default prefix
	to /usr.

	* plugin/src/Makefile.am: Likewise.

2005-07-24  Jim Huang  <jserv@kaffe.org>

	* src/notifier/notifier-impl.c (destroy_win):
	Adjust window object release sequence and perform code indent with
	more comments.

2005-07-24  Jim Huang  <jserv@kaffe.org>

	* plugin/src/plugin.cpp: Rename "pcman" to "pcmanx" in registry.

	* plugin/data/pcmanx.html: Eliminate suffix "/" in url parsing.

2005-07-23  Jim Huang  <jserv@kaffe.org>

	* README: Add "How to Build" section.

	* TODO: Updated.

2005-07-23  Jim Huang  <jserv@kaffe.org>

	* src/core/termview.h
	(SetTermData): New public method to set terminal data information,
	which is useful to the plugin implementation.

	* src/Makefile.am,
	src/core/Makefile.am,
	src/view/termview.cpp,
	src/view/termview.h:
	Move CTermView from $(top_srcdir)/src/view to (top_srcdir)/src/core,
	so that we could use the same codebase for both the standalone program
	and the Mozilla/Firefox plugin.

	* src/view/telnetview.cpp,
	src/view/telnetview.h,
	src/view/telnetcon.cpp (CTelnetCon::OnConnect) (CTelnetCon::OnClose)
	(CTelnetCon::OnTimer) (CTelnetCon::OnNewIncomingMessage):
	Indicate the conditional compilations with MOZ_PLUGIN macro.

	* plugin/src/pluginbase.h,
	plugin/src/npplat.h,
	plugin/src/plugin.cpp,
	plugin/src/Makefile.am,
	plugin/src/npp_gate.cpp,
	plugin/src/np_entry.cpp,